sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:6: error: value && is not a member of Int
  for (j<-getNombreValeurs() to 0 by -1 && b==0) {
                                        ^